--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.port=${SERVER_PORT}
+server.port=8080
 spring.application.name=YiliMusic
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST}:3306/${DATABASE_NAME}?characterEncoding=UTF8&userSSL=false
 spring.datasource.username=${MYSQL_USER_NAME}
