--- a/.env
+++ b/.env
@@ -1,4 +1,3 @@
-MYSQL_HOST=150.158.99.152
-MYSQL_USER_NAME=admin
-MYSQL_PASSWORD=chen123
-DATABASE_NAME=yili_music
+MYSQL_ADDRESS=170.0.0.1:3306
+MYSQL_USER_NAME=root
+MYSQL_PASSWORD=1
