config⚙(src):change config

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,6 +1,6 @@
 server.port=8080
 spring.application.name=YiliMusic
-spring.datasource.url=jdbc:mysql://${MYSQL_ADDRESS}/${MYSQL_DATABASE:yili_music}?characterEncoding=UTF8&userSSL=false
+spring.datasource.url=jdbc:mysql://${MYSQL_ADDRESS}/yili_music?characterEncoding=UTF8&userSSL=false
 spring.datasource.username=${MYSQL_USERNAME}
 spring.datasource.password=${MySQL_PASSWORD}
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
