--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,19 +2,42 @@ name: Deploy to Server
 
 on:
   push:
-    branches: [ "master","dev"]
+    branches: [ "master" ]
   pull_request:
     branches: [ "master" ]
 
 jobs:
-  build:
+  deploy:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v2
+
+      - name: Login to Docker Hub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
       - name: Build and Push Docker Image
         uses: docker/build-push-action@v2
         with:
           context: .
-         # push: true
-          tags: your-docker-username:latest
+          push: true
+          tags: chenxianhua123/${{ secrets.CONTAINER_NAME }}:latest
+
+      - name: Push Docker Image to Docker Hub
+        run: docker push your-docker-username/${{ secrets.CONTAINER_NAME }}
+
+      - name: SSH into remote server
+        uses: appleboy/ssh-action@master
+        with:
+          host: 47.120.3.222
+          username: ${{ secrets.REMOTE_SERVER_USERNAME }}
+          password: ${{ secrets.REMOTE_SERVER_PASSWORD }}
+          script: |
+            docker pull your-docker-username/${{ secrets.CONTAINER_NAME }}
+            docker stop ${{ secrets.CONTAINER_NAME }} || true
+            docker rm ${{ secrets.CONTAINER_NAME }} || true
+            docker run -d --name ${{ secrets.CONTAINER_NAME }} -p 5431:8080 your-docker-username/${{ secrets.CONTAINER_NAME }}
