--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,10 +1,8 @@
-spring.config.import=optional:file:.env[.properties]
-
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 server.port=8081
-spring.datasource.url=jdbc:mysql://localhost:3306/yili_music?serverTimezone=GMT%2B8&useSSL=false&&useUnicode=true&&CharacterEncoding=utf-8
+spring.datasource.url=jdbc:mysql://localhost:3307/yili_music?serverTimezone=GMT%2B8&useSSL=false&&useUnicode=true&&CharacterEncoding=utf-8
 spring.datasource.username=root
-spring.datasource.password=1
-
+spring.datasource.password=123456
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
