--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,5 +1,6 @@
 name: Deploy to Server
-
+env:
+  CONTAINER_NAME: "yili-music"
 on:
   push:
     branches: [ "master" ]
@@ -25,10 +26,10 @@ jobs:
         with:
           context: .
           push: true
-          tags: chenxianhua123/${{ secrets.CONTAINER_NAME }}:latest
+          tags: chenxianhua123/${{ env.CONTAINER_NAME }}:latest
 
       - name: Push Docker Image to Docker Hub
-        run: chenxianhua123/${{ secrets.CONTAINER_NAME }}
+        run: chenxianhua123/${{ env.CONTAINER_NAME }}
 
       - name: SSH into remote server
         uses: appleboy/ssh-action@master
@@ -37,7 +38,7 @@ jobs:
           username: ${{ secrets.REMOTE_SERVER_USERNAME }}
           password: ${{ secrets.REMOTE_SERVER_PASSWORD }}
           script: |
-            docker pull chenxianhua123/${{ secrets.CONTAINER_NAME }}
-            docker stop ${{ secrets.CONTAINER_NAME }} || true
-            docker rm ${{ secrets.CONTAINER_NAME }} || true
-            docker run -d --name ${{ secrets.CONTAINER_NAME }} -p 5431:8080 chenxianhua123/${{ secrets.CONTAINER_NAME }}
+            docker pull chenxianhua123/${{ env.CONTAINER_NAME }}
+            docker stop ${{ env.CONTAINER_NAME }} || true
+            docker rm ${{ env.CONTAINER_NAME }} || true
+            docker run -d --name ${{ env.CONTAINER_NAME }} -p 5431:8080 chenxianhua123/${{ env.CONTAINER_NAME }}
