update:deploy file

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -9,3 +9,4 @@ spring.h2.console.enabled=true
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 spring.jpa.properties.format_sql=true
+spring.flyway.enabled=false
