--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,6 +1,8 @@
 name: Deploy to Server
 env:
-  CONTAINER_NAME: "yili-music"
+  REGISTRY: docker.io
+  CONTAINER_NAME: ${{ github.event.repository.name }}
+  IMAGE_TAG: latest
 on:
   push:
     branches: [ "master" ]
@@ -13,32 +15,49 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
+
+      - name: Set up JDK 11
+        uses: actions/setup-java@v3
+        with:
+          java-version: 11
+          distribution: 'openjdk'
+
+      - name: Dependencies Cache
+        uses: actions/cache@v2
+        with:
+          path: ~/.m2/repository
+          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
+          restore-keys: |
+            ${{ runner.os }}-maven-
+            ${{ runner.os }}-
+
+      - name: Build with Maven
+        run: mvn -B package --file pom.xml -Dspring.profiles.active=prod -Djasypt.encryptor.password=xiaohuahuaffsxDDJ2435
 
       - name: Login to Docker Hub
-        uses: docker/login-action@v1
+        if: github.event_name != 'pull_request'
+        uses: docker/login-action@v2
         with:
+          registry: ${{ env.REGISTRY }}
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Build and Push Docker Image
-        uses: docker/build-push-action@v2
+        uses: docker/build-push-action@v3
         with:
           context: .
-          push: true
-          tags: chenxianhua123/${{ env.CONTAINER_NAME }}:latest
+          push: ${{ github.event_name != 'pull_request' }}
+          tags: ${{ secrets.DOCKER_HUB_USER }}/${{ env.CONTAINER_NAME }}:${{ env.IMAGE_TAG }}
 
-      - name: Push Docker Image to Docker Hub
-        run: chenxianhua123/${{ env.CONTAINER_NAME }}:latest
-
-      - name: SSH into remote server
+      - name: Connect to server
         uses: appleboy/ssh-action@master
         with:
-          host: 47.120.3.222
+          host: REMOTE_SERVER_IP
           username: ${{ secrets.REMOTE_SERVER_USERNAME }}
           password: ${{ secrets.REMOTE_SERVER_PASSWORD }}
           script: |
-            docker pull chenxianhua123/${{ env.CONTAINER_NAME }}:latest
             docker stop ${{ env.CONTAINER_NAME }} || true
             docker rm ${{ env.CONTAINER_NAME }} || true
-            docker run -d --name ${{ env.CONTAINER_NAME }} -p 5431:8080 chenxianhua123/${{ env.CONTAINER_NAME }}
+            docker pull ${{ secrets.DOCKER_HUB_USER }}/${{ env.CONTAINER_NAME }}:${{ env.IMAGE_TAG }}
+            docker run --name ${{ env.CONTAINER_NAME }} -p 5431:8080  -d ${{ secrets.DOCKER_HUB_USER }}/${{ env.CONTAINER_NAME }}:${{ env.IMAGE_TAG }}
