--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,7 +21,7 @@ jobs:
         uses: actions/setup-java@v3
         with:
           java-version: 11
-          distribution: 'oracle'
+          distribution: 'adopt'
 
       - name: Dependencies Cache
         uses: actions/cache@v2
