feat:Turn off springdoc in the production environment.

--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -18,3 +18,9 @@ spring:
   flyway:
     enabled: true
     baseline-on-migrate: true
+
+springdoc:
+  api-docs:
+    enabled: off
+  swagger-ui:
+    enabled: off
